# ktplotspy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  README.rst  codecov.yaml  pyproject.toml  shields.json
.github/: dependabot.yml
.github/workflows/: badge.yaml  dependabot-autoapprove.yml  formatting.yaml  publish_pypi.yaml  tests.yaml
data/: ventolab_tutorial_small_adata.h5ad
data/out_split/: deconvoluted.txt
data/out_v5/: degs_analysis_CellSign_active_interactions_07_27_2023_151846.txt  degs_analysis_CellSign_active_interactions_deconvoluted_07_27_2023_151846.txt  degs_analysis_deconvoluted_07_27_2023_151846.txt  degs_analysis_deconvoluted_percents_07_27_2023_151846.txt  degs_analysis_interaction_scores_07_27_2023_151846.txt  degs_analysis_means_07_27_2023_151846.txt  degs_analysis_relevant_interactions_07_27_2023_151846.txt  degs_analysis_significant_means_07_27_2023_151846.txt
docs/: README.rst  api.rst  conf.py  index.rst  style.css
docs/_static/: style.css
docs/notebooks/: Untitled.ipynb  testing.ipynb  tutorial.ipynb  tutorial_v5.ipynb  tutorial_v5_cellsign.ipynb  tutorial_v5_interaction_score.ipynb
ktplotspy/: __init__.py
ktplotspy/plot/: __init__.py  plot_cpdb.py  plot_cpdb_chord.py  plot_cpdb_heatmap.py  rattempt.py
ktplotspy/utils/: badge.py  settings.py  support.py
src/ktplotspy/: __init__.py
src/ktplotspy/plot/: __init__.py  plot_cpdb.py  plot_cpdb_chord.py  plot_cpdb_chord2.py  plot_cpdb_heatmap.py
src/ktplotspy/utils/: settings.py  support.py
tests/: conftest.py  test_plot_cpdb.py  test_plot_cpdb_chord.py  test_plot_cpdb_heatmap.py
tests/fixtures/: fixtures.py
