[tool.poetry]
name = "ktplotspy"
version = "0.1.0"
description = "Python library for plotting Cellphonedb results. Ported from ktplots R package."
authors = ["Kelvin Tuong <26215587+zktuong@users.noreply.github.com>"]
license = "MIT"
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = "^3.8"
pandas= "*"
numpy = "*"
plotnine = "*"
seaborn = "*"
anndata = {optional = true, version = "^0.7.6"}
black = {optional = true, version = "*"}
pytest-cov = {optional = true, version = "*"}

[tool.poetry.dev-dependencies]


[tool.poetry.extras]
test = [
    "anndata",
    "black",
    "pytest-cov",
]
docs = [
    "nbsphinx==0.8.6",
    "sphinx==4.1.2",
    "sphinx_autodoc_typehints>=1.8.0",
    "sphinx_rtd_theme>=0.4,<0.5",
    "six",
    "readthedocs-sphinx-ext",
    "recommonmark",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Configuration for pytest
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning", 
    "ignore::plotnine.exceptions.PlotnineWarning"
]
testpaths=["tests"]
addopts = """\
    --cov ktplotspy \
    --cov-report=xml
"""

# Configuration for the interrogate tool which checks docstring coverage
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
fail-under = 100.0
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 1
quiet = false
whitelist-regex = []
color = true
exclude = ["test"]

[tool.black]
line-length = 140
include = '\.pyi?$'
