[tool.poetry]
name = "ktplotspy"
version = "0.2.6"
description = "Python library for plotting Cellphonedb results. Ported from ktplots R package."
authors = ["Kelvin Tuong <26215587+zktuong@users.noreply.github.com>"]
license = "MIT"
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
]
homepage = "https://github.com/zktuong/ktplotspy"
repository = "https://github.com/zktuong/ktplotspy"
keywords = [
    "cellphonedb",
    "cpdb",
    "plot_cpdb",
    "ktplots",
    "ligand-receptor",
    "interaction",
]
readme = "README.rst"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=1.5,<3.0"
numpy = "<=2.1.3"
plotnine = "<=0.12.4"
seaborn = ">=0.12,<0.14"
requests = ">=2.28.0"
python-circos = ">=0.3.0"
setuptools = "*"
anndata = { optional = true, version = ">=0.7.6,<0.11.2" }
black = { optional = true, version = "*" }
pytest-cov = { optional = true, version = "*" }
sphinx = { optional = true, version = "<8" }                        # see issue at https://github.com/readthedocs/readthedocs.org/issues/10279
nbsphinx = { optional = true, version = "<=0.9.5" }
sphinx-autodoc-typehints = { optional = true, version = "<=2.3.0" }
sphinx_rtd_theme = { optional = true, version = "<=3.0.2" }
readthedocs-sphinx-ext = { optional = true, version = "<=2.2.5" }
recommonmark = { optional = true, version = "<=0.7.1" }

[tool.poetry.dev-dependencies]


[tool.poetry.extras]
test = ["anndata", "black", "pytest-cov"]
docs = [
    "sphinx",
    "nbsphinx",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "readthedocs-sphinx-ext",
    "recommonmark",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Configuration for pytest
[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::plotnine.exceptions.PlotnineWarning",
]
testpaths = ["tests"]
addopts = """\
    --cov ktplotspy \
    --cov-report=xml
"""

# Configuration for the interrogate tool which checks docstring coverage
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
fail-under = 100.0
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 1
quiet = false
whitelist-regex = []
color = true
exclude = ["test", "docs"]

[tool.black]
line-length = 140
include = '\.pyi?$'
